# game-theoretic-learning

./: README.md  game-theoretic-learning.cabal
GTL/: Plotting.hs  PrettyPrint.hs
GTL/Data/: Dynamic.hs  DynamicProgramming.hs  Finite.hs  History.hs  MarkovDecisionProcess.hs  Mockup.hs  Signaling.hs  Strategy.hs  Time.hs  Unitless.hs  Utility.hs
GTL/Data/HList/: HZip3.hs  HZip4.hs  List.hs  Vector.hs
GTL/Data/History/: Instances.hs  TH.hs
GTL/Example/FictitiousPlay/: Setup.hs  printAll.hs
GTL/Game/: ThreePlayer.hs  TwoPlayer.hs
GTL/Game/ThreePlayer/: Jordan.hs
GTL/Game/TwoPlayer/: BattleOfTheSexes.hs  PrisonersDilemma.hs  RockPaperScissors.hs  Shapley.hs
GTL/Game/TwoPlayer/BattleOfTheSexes/: Asymmetrical.hs  Symmetrical.hs
GTL/Interaction/: Consistency.hs  Consistency2.hs  EEE2.hs  Learning.hs  Learning2.hs  Optimality.hs  Optimality2.hs  SimulatedConsistency2.hs  SimulatedLearning2.hs
GTL/Learning/: FictitiousPlay.hs  OneShot.hs
GTL/Learning/FictitiousPlay/: Learner.hs  Plotting.hs
GTL/Modeling/: FullGame.hs  ModelState.hs
GTL/Numeric/: DynamicProgramming.hs  MarkovDecisionProcess.hs  Probability.hs
GTL/Numeric/DynamicProgramming/: PolicyIteration.hs
GTL/Numeric/MarkovChain/: Ergodic.hs
GTL/Numeric/MarkovDecisionProcess/: PolicyIteration.hs  Strategies.hs  Types.hs
GTL/Numeric/Probability/: EmpiricalFrequency.hs  Finite.hs
