name:                game-theoretic-learning
version:             0.1.0.0
synopsis:            A library for game theoretic learning simulations.
description:         A library for game theoretic learning simulations.
homepage:            http://github.com/dudebout/game-theoretic-learning
license:             OtherLicense
license-file:        LICENSE
author:              Nicolas Dudebout
maintainer:          Nicolas Dudebout <nicolas.dudebout@gatech.edu>
copyright:           (c) 2012, Nicolas Dudebout <nicolas.dudebout@gatech.edu>
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: GTL.Data.Dynamic
                 , GTL.Data.DynamicProgramming
                 , GTL.Data.Finite
                 , GTL.Data.History
                 , GTL.Data.History.TH
                 , GTL.Data.History.Instances
                 , GTL.Data.MarkovDecisionProcess
                 , GTL.Data.Mockup
                 , GTL.Data.Signaling
                 , GTL.Data.Strategy
                 , GTL.Data.Unitless
                 , GTL.Data.Utility
                 , GTL.Interaction.Consistency
                 , GTL.Interaction.Consistency2
                 , GTL.Interaction.EEE2
                 , GTL.Interaction.Learning
                 , GTL.Interaction.Learning2
                 , GTL.Interaction.Optimality
                 , GTL.Learning.FictitiousPlay
                 , GTL.Numeric.DynamicProgramming
                 , GTL.Numeric.DynamicProgramming.PolicyIteration
                 , GTL.Numeric.MarkovChain.Ergodic
                 , GTL.Numeric.Probability
                 , GTL.Numeric.Probability.Finite
                 , GTL.PrettyPrint
  build-depends: base ==4.5.*
               , probability ==0.2.*
               , hmatrix ==0.14.*
               , array ==0.4.*
               , mtl ==2.1.*
               , monad-loops ==0.3.*
               , wl-pprint ==1.1.*
               , template-haskell ==2.7.*
               , tuple ==0.2.*
